@@ -1,3 +1,10 @@
+2004-01-30  Richard Henderson  <rth@redhat.com>
+
+	PR c++/13693
+	* method.c (use_thunk): Don't force_target_expr for void thunks.
+	* tree.c (build_target_expr_with_type): Assert non-void type.
+	(force_target_expr): Likewise.
+
 2004-01-25  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13833
